<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <EditText
            android:id="@+id/txtCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/btn_txt_City"
            android:inputType="textPersonName"
            android:textSize="28dp" />

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/txt_SEARCH"
            android:textSize="22dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@color/colorCyan">

            <TextView
                android:id="@+id/current"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lbl_current"
                android:textSize="25dp"
                android:layout_marginTop="9dp"
                />

            <TextView
                android:id="@+id/lblCurrent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Current weather"
                android:textSize="25dp"
                android:layout_marginTop="9dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@color/colorBlue">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lbl_min"
                android:textSize="25dp"
                android:layout_marginTop="9dp"/>

            <TextView
                android:id="@+id/lblmin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Min weather"
                android:textSize="25dp"
                android:layout_marginTop="9dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@color/colorGold">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_max"
                android:textSize="25dp"
                android:layout_marginTop="9dp"/>

            <TextView
                android:id="@+id/lblmax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Max weather"
                android:textSize="25dp"
                android:layout_marginTop="9dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@color/colorRed">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_weather"
                android:textSize="25dp"
                android:layout_marginTop="9dp"/>

            <TextView
                android:id="@+id/lblWeather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="here weather "
                android:textSize="25dp"
                android:layout_marginTop="9dp"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/imgWeather"
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <Button
            android:id="@+id/btngo"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/txt_goto"
            android:textSize="22dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="20dp"/>

    </LinearLayout>
</RelativeLayout>